scrollbar and iOS fix
fixed double scrollbar on large screens, attempted to fix background attachment on iOS, may need more commits to fix

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow-x: visible;
 }
 
 a {
@@ -19,7 +19,7 @@ a {
     color: white;
 }
 .main-container {
-    background-image: url('images/background_blur.jpg');
+    background-image: url('./images/background_blur.jpg');
     background-size: cover;
     background-attachment: fixed;
 }
